--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 200, 0;
+  --bs-primary-rgb: 126, 208, 228;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -145,6 +145,7 @@ h4, .h4 {
   }
 }
 
+
 h5, .h5 {
   font-size: 1.25rem;
 }
@@ -177,6 +178,18 @@ ol,
 ul {
   padding-left: 2rem;
 }
+
+#benefits-list {
+  list-style-type: none;
+  vertical-align: middle;
+}
+
+#benefits {
+  background: url("..\\assets\\img\\check-solid.png") no-repeat left center;
+  background-size: 25px;
+  padding-left: 35px;
+}
+
 
 ol,
 ul,
@@ -11309,7 +11322,7 @@ p {
   margin-bottom: 1rem;
 }
 .page-section h3.section-subheading, .page-section .section-subheading.h3 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 400;
   font-style: italic;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -11409,7 +11422,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
+  color: #424645;
   background-image: url("../assets/img/header_bg_ke.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11424,9 +11437,9 @@ header.masthead .masthead-subheading {
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
+  font-size: 2.25rem;
   font-weight: 700;
-  line-height: 3.25rem;
+  line-height: 2.25rem;
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -11437,10 +11450,10 @@ header.masthead .masthead-heading {
     padding-bottom: 12.5rem;
   }
   header.masthead .masthead-subheading {
-    font-size: 2.25rem;
+    font-size: 3.25rem;
     font-style: italic;
-    line-height: 2.25rem;
-    margin-bottom: 2rem;
+    line-height: 3.25rem;
+    margin-bottom: 3rem;
   }
   header.masthead .masthead-heading {
     font-size: 4.5rem;
@@ -11722,7 +11735,7 @@ header.masthead .masthead-heading {
 
 section#contact {
   background-color: #212529;
-  background-image: url("../assets/img/orangesdark.jpg");
+  background-image: url("../assets/img/ocean.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
